Fixed jump bug (two opcodes, bad docs)
Added DB command

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -9,4 +9,5 @@ textarea {
 body {
 	background-color: #1f1f1f;
 	color: white;
+	font-family: monospace;
 }
